# drp-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  diesel.toml  flake.nix
migrations/2026-06-01-170937-0000_create_users_recipes/: down.sql  up.sql
migrations/2026-06-01-192143-0000_separate_recipes/: down.sql  up.sql
migrations/2026-06-01-192143-0000_separate_recipes_add_favorites_table/: down.sql  up.sql
migrations/2026-06-01-192144-0000_add_favorites_table/: down.sql  up.sql
migrations/2026-06-02-102911-0000_add_queue_table/: down.sql  up.sql
migrations/2026-06-04-120942-0000_add_reviews/: down.sql  up.sql
migrations/2026-06-09-132817-0000_add_recipe_body/: down.sql  up.sql
migrations/2026-06-09-134035-0000_recipe_use_ingredient_json/: down.sql  up.sql
migrations/2026-06-09-141919-0000_add_user_inventory/: down.sql  up.sql
migrations/2026-06-16-002504-0000_add_shoping_list/: down.sql  up.sql
migrations/2026-06-16-100216-0000_add_recipe_servings/: down.sql  up.sql
migrations/2026-06-16-101205-0000_recipe_modify_better_ingredients/: down.sql  up.sql
migrations/2026-06-16-122702-0000_recipe_make_pub_priv/: down.sql  up.sql
src/: db.rs  errors.rs  lib.rs  main.rs  models.rs  schema.rs
src/api/: mod.rs  v1.rs
src/api/v1/: auth.rs  middlewares.rs  mod.rs  quotes.rs  recipe.rs  user.rs
src/db/: mod.rs  models.rs
