[package]
    edition = "2024"
    name    = "drp-backend"
    version = "0.1.0"

[dependencies]
    anyhow             = "^1.0"
    axum               = { version = "^0.8", features = ["macros"] }
    bigdecimal         = { version = "^0.4", features = ["serde"] }
    diesel             = { version = "^2.3", features = ["postgres", "numeric"] }
    dotenvy            = "^0.15"
    serde              = { version = "^1.0", features = ["derive"] }
    thiserror          = "^2.0"
    tokio              = { version = "^1.52", features = ["full"] }
    tower              = "^0.5"
    tower-http         = { version = "^0.6", features = ["timeout", "trace"] }
    tracing            = "^0.1"
    tracing-subscriber = "^0.3"
    utoipa             = { version = "^5.5", features = ["axum_extras"] }
    utoipa-axum        = "^0.2"
    utoipa-swagger-ui  = { version = "^9.0", features = ["axum", "reqwest"] }

[lib]
    name = "drp_backend"
    path = "src/lib.rs"

[[bin]]
    name = "app"
    path = "src/bin/app.rs"
